[package]
name = "circus"
version = "0.1.0"
edition = "2021"
authors = ["<you@example.com>"]
license = "MIT OR Apache-2.0"
description = "A library for columnar time-series storage using Banyan trees"
repository = "https://your-repo-url.com"
keywords = ["database", "timeseries", "columnar", "banyan", "ipfs"]
categories = ["data-structures", "database"]

[dependencies]
anyhow = "1.0"
banyan = "0.17.1"
banyan-utils = "0.10.1"
chrono = "0.4"
libipld = { version = "0.12.0", features = ["derive"] } # cbordag, "serde-codec"
multihash = "0.19.3"
roaring = "0.10.12"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.17"
thiserror = "1.0"
zstd = { version = "0.9.2" }  # features = ["experimental", "zstdmt", "zdict_builder", "doc-cfg"]
tempfile = "3.19.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
gorilla = "0.2.1"
cbor-data = "0.8.17"
pco = "0.4.2"
# Optional dependencies
# vint = { version = "0.1", optional = true } # Uncomment if using vint crate
