[package]
name = "columnar-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
columnar = { path = "../columnar" }
libipld = "0.14"
csv = "1.2"
banyan-utils = "0.10.1"
anyhow = "1.0.97"
banyan = "0.17.1"
tempfile = "3.19.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
