[package]
name = "columnar-banyan"
version = "0.1.0"
edition = "2021"
authors = ["<you@example.com>"]
license = "MIT OR Apache-2.0"
description = "A library for columnar time-series storage using Banyan trees"
repository = "https://your-repo-url.com"
keywords = ["database", "timeseries", "columnar", "banyan", "ipfs"]
categories = ["data-structures", "database"]

[dependencies]
anyhow = "1.0"
banyan = "0.17.1"
banyan-utils = "0.10.1"
chrono = "0.4"
libipld = { version = "0.14.0", features = ["dag-cbor", "derive"] }
roaring = "0.10.12"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
thiserror = "1.0"
zstd = { version = "0.9.2+zstd.1.5.1" }  # features = ["experimental", "zstdmt", "zdict_builder", "doc-cfg"]
# Optional dependencies
# vint = { version = "0.1", optional = true } # Uncomment if using vint crate